@@ -19,8 +19,10 @@
 * DrawingModule class: On non-Windows Systems the module initializer enables using System.Drawing types that depend
   on native GDI+ calls.
 
-+ KGySoft.Drawing.Imaging namespace:
+* KGySoft.Drawing.Imaging namespace:
 ====================================
+* Palette class:
+  + New indexer (same as the GetColor method)
 + New GifEncoder class
 + New GifGraphicsDisposalMethod enum
 + New GifCompressionMode enum
